Добавила пример ссылки в третьем столбце колонки "Ожидает проверки"

--- a/templates/solving.html
+++ b/templates/solving.html
@@ -8,7 +8,7 @@
         <div class="cell">Название задачи</div>
         <div class="cell">Технологии разработки программного обеспечения</div>
         <div class="cell">Технологии разработки программного обеспечения</div>
-        <div class="cell">Технологии разработки программного обеспечения</div>
+        <div class="cell"><a href="#">Технологии разработки программного обеспечения</a></div>
         {% for task in tasks %}
         <div class="col-lg-3">{{ task.discipline }}</div>
         <div class="col-lg-3">{{ task.theme }}</div>
