--- a/static/css/main.css
+++ b/static/css/main.css
@@ -146,10 +146,12 @@ a{
     color: #3b5165;
 }
 .add{
-margin:auto auto 20px auto;
+margin:auto;
+margin-bottom:20px;
 }
 .after-add{
-margin:10px auto auto auto;
+margin:auto;
+margin-top:10px;
 }
 .add-form{
      background-color: #3B5165;
