[CodeFactor] Apply fixes

--- a/static/css/sign.css
+++ b/static/css/sign.css
@@ -18,7 +18,7 @@
     background-color: #fff;
     padding: 25px 30px;
     border: 1px solid rgba(122, 201, 226, 0.52);
-    box-shadow: 0px 0px 100px rgba(44, 73, 127, 0.21);
+    box-shadow: 0 0 100px rgba(44, 73, 127, 0.21);
     border-radius: 10px;
   }
   .container .title{
@@ -36,7 +36,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    margin: 20px 0 12px 0;
+    margin: 20px 0 12px;
   }
  .input-box{
     display: flex;
@@ -69,7 +69,7 @@
     font-size: 16px;
     padding-left: 10px;
     background: #DADADA;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
     border:1px solid #DADADA;
     border-radius: 10px;
     margin-left: auto;
