--- a/templates/student_task.html
+++ b/templates/student_task.html
@@ -1,20 +1,21 @@
 {% extends 'maket.html' %}
 
 {% block center %}
-<div class="container">
-    <div class="row">
-        <div class="col-lg-3">Дисциплина</div>
-        <div class="col-lg-3">Тема</div>
-        <div class="col-lg-3">Задача</div>
-        <div class="col-lg-3">Статус</div>
+<div class="container-screen">
+    <div class="table four-columns">
+        <div class="cell">Дисциплина</div>
+        <div class="cell">Тема</div>
+        <div class="cell">Задача</div>
+        <div class="cell">Статус</div>
     </div>
     {% for student_task_item in student_task %}
     <div class="row">
-        <div class="col-lg-3">{{ student_task_item.discipline }}</div>
-        <div class="col-lg-3">{{ student_task_item.theme }}</div>
-        <div class="col-lg-3"><a href="/student_task/{{ student_task_item.id }}">{{ student_task_item.task }}</a></div>
-        <div class="col-lg-3">{{ student_task_item.status }}</div>
+        <div class="cell">{{ student_task_item.discipline }}</div>
+        <div class="cell">{{ student_task_item.theme }}</div>
+        <div class="cell"><a href="/student_task/{{ student_task_item.id }}">{{ student_task_item.task }}</a></div>
+        <div class="cell">{{ student_task_item.status }}</div>
     </div>
     {% endfor %}
+    <div class="notification mini-form no-visible"></div>
 </div>
 {% endblock %}
