Написала содержимое окна-предупреждения

--- a/templates/student_task.html
+++ b/templates/student_task.html
@@ -16,6 +16,7 @@
         <div class="cell">{{ student_task_item.status }}</div>
     </div>
     {% endfor %}
-    <div class="notification mini-form no-visible"></div>
+    <div class="notification mini-form no-visible"> На данный момент вы не загрузили ни одной работы.<br>
+    Проверьте нет ли у вас работ, которые ожидают проверки.</div>
 </div>
 {% endblock %}
