Исправлены стили в html для страниц созданных ранее чем пакет стилей

--- a/templates/discipline.html
+++ b/templates/discipline.html
@@ -4,7 +4,7 @@
 <div class="container-screen">
     <div class="col-lg-8">
       <form method="post" class="add">
-          <div class="row mini-form add-form">
+          <div class="row mini-form add-form flex-in-line">
               <input class="textbox" type="text" name="name" id="name" placeholder="Название дисциплины">
               <input class="add-button" id="submit" type="submit" value="Добавить">
           </div>
