Убрала синтаксические ошибки и доблирование дива с предупреждением

--- a/templates/discipline.html
+++ b/templates/discipline.html
@@ -22,6 +22,6 @@
         {% endfor %}
     </div>
     <div class="mini-form notification after-add no-visible">Вы еще не добавили ни одной дисциплины.<br>
-    Вверхняя панель поможет вам это сделать.</div>
+    Верхняя панель поможет Вам это сделать.</div>
     </div>
     {% endblock %}
