--- a/templates/solving.html
+++ b/templates/solving.html
@@ -3,22 +3,22 @@
 {% block center %}
 <div class="container-screen">
     <div class="col-lg-8 ">
-    {% if tasks %}
-    <div class="row thead">
-        <div class="col">Дисциплина</div>
-        <div class="col">Тема</div>
-        <div class="col">Название задачи</div>
-    </div>
+        {% if tasks %}
+        <div class="row thead">
+            <div class="col">Дисциплина</div>
+            <div class="col">Тема</div>
+            <div class="col">Название задачи</div>
+        </div>
         {% for task in tasks %}
         <div class="row">
-        <div class="col cell border-radius-left">{{ task.discipline }}</div>
-        <div class="col cell">{{ task.theme }}</div>
-        <div class="col cell border-radius-right"><a href="/solving/{{ task.id }}">{{ task.task }}</a></div>
+            <div class="col cell border-radius-left">{{ task.discipline }}</div>
+            <div class="col cell">{{ task.theme }}</div>
+            <div class="col cell border-radius-right"><a href="/solving/{{ task.id }}">{{ task.task }}</a></div>
         </div>
         {% endfor %}
     </div>
     {% else %}
-    <div class="notification mini-form">На данный момент работы, требующей вашей проверки, нет. Отдыхайте.</div>
+    <div class="notification mini-form">На данный момент работы, требующей Вашей проверки, нет. Отдыхайте.</div>
     {% endif %}
 </div>
 </div>
