--- a/templates/student_task.html
+++ b/templates/student_task.html
@@ -18,8 +18,7 @@
             <div class="col cell border-radius-right">{{ student_task_item.status }}</div>
         </div>
         {% endfor %}
-        <div class="notification mini-form no-visible"> На данный момент вы не загрузили ни одной работы.<br>
-            Проверьте нет ли у вас работ, которые ожидают проверки.
+        <div class="notification mini-form no-visible"> На данный момент вы не получили ни одной работы.<br>
         </div>
     </div>
 </div>
