--- a/templates/discipline.html
+++ b/templates/discipline.html
@@ -13,7 +13,7 @@
 
     {% if data %}
     <div class="col-lg-8 after-add">
-        <div class="row thead">
+        <div class="row table-head">
             <div class="col">Дисциплины</div>
         </div>
         {% for discipline in data %}
