--- a/templates/solving.html
+++ b/templates/solving.html
@@ -4,7 +4,7 @@
 <div class="container-screen">
     <div class="col-lg-8 ">
         {% if tasks %}
-        <div class="row thead">
+        <div class="row table-head">
             <div class="col">Дисциплина</div>
             <div class="col">Тема</div>
             <div class="col">Название задачи</div>
