--- a/templates/student_task.html
+++ b/templates/student_task.html
@@ -3,7 +3,7 @@
 {% block center %}
 <div class="container-screen">
     <div class="col-lg-8 ">
-        <div class="row thead">
+        <div class="row table-head">
             <div class="col">Дисциплина</div>
             <div class="col">Тема</div>
             <div class="col">Задача</div>
