Переименновала вы на Вы

--- a/templates/student_task.html
+++ b/templates/student_task.html
@@ -18,7 +18,7 @@
             <div class="col cell border-radius-right">{{ student_task_item.status }}</div>
         </div>
         {% endfor %}
-        <div class="notification mini-form no-visible"> На данный момент вы не получили ни одной работы.<br>
+        <div class="notification mini-form no-visible"> На данный момент Вы не получили ни одной работы.
         </div>
     </div>
 </div>
