--- a/templates/theme.html
+++ b/templates/theme.html
@@ -1,7 +1,7 @@
 {% extends 'maket.html' %}
 
 {% block scripts %}
-<script language="JavaScript" type="text/javascript" src={{url_for('static', filename='js/theme.js' )}}></script>
+<script language="JavaScript" type="text/javascript" src={% url 'static', filename='js/theme.js' %}></script>
 {% endblock %}
 
 {% block center %}
