--- a/templates/task.html
+++ b/templates/task.html
@@ -32,4 +32,28 @@
     </div>
     {% endfor %}
 </div>
+
+<div class="container-screen">
+    <div class="col-lg-8 after-add">
+        <div class="row table-head">
+            <div class="col">{{ theme }}</div>
+        </div>
+        <div class="row">
+            <div class="col cell border-radius-left border-radius-right">
+                <form method="post" class="add form-list">
+                    <p>Новая задача</p>
+                    <input class="textbox text-on-white" type="text" name="name" id="name"
+                           placeholder="Название задачи">
+                    <input class="textbox text-on-white" type="text" name="link" id="link"
+                           placeholder="Ссылка на задачу">
+                    <div class="flex-in-line flex-for-quantity">
+                        <p>Количество проверок</p>
+                        <input class="textbox text-on-white little" type="text" name="review_count" id="review_count">
+                        <input class="add-button" id="submit" type="submit" value="Добавить">
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
